fix top-navbar component falling behind other components when scrolling down

--- a/src/app/top-navbar/top-navbar.component.css
+++ b/src/app/top-navbar/top-navbar.component.css
@@ -34,6 +34,7 @@ to the top and is fixed */
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: #ffffff;
+  z-index: 99999;
 }
 
   .toolbar_offset {
@@ -41,6 +42,7 @@ to the top and is fixed */
   padding-top: 10px;
   padding-bottom: 10px;
   background-color: #ffffff;
+  z-index: 99999;
 }
 
 .toolbar_offset img {
